@@ -667,7 +667,15 @@ public:
 		_stack = new Smoke::StackItem[1];
 		Marshall::HandlerFn fn = getMarshallFn(type());
 		(*fn)(this);
+		// Save any address in zeroth element of the arrary of 'void*'s passed to 
+		// qt_metacall()
+		void * ptr = o[0];
 		smokeStackToQtStack(_stack, o, 1, _replyType);
+		// Only if the zeroth element of the arrary of 'void*'s passed to qt_metacall()
+		// contains an address, is the return value of the slot needed.
+		if (ptr != 0) {
+			*(void**)ptr = *(void**)(o[0]);
+		}
     }
 
     SmokeType type() { 
@@ -690,8 +698,7 @@ public:
 	bool cleanup() { return false; }
 	
 	~SlotReturnValue() {
-		// Memory leak for now..
-//		delete[] _stack;
+		delete[] _stack;
 	}
 };
 
